--- a/12강/강아지사이트-헤더.html
+++ b/12강/강아지사이트-헤더.html
@@ -16,7 +16,7 @@
             width: 100%;
             height: 150px;
             background-color: #f46075;
-            background-image: url('images/nav2.png');
+            background-image: url('12강/images/bg2.png');
             background-repeat: no-repeat;
             background-position: right center;
             /* /컨텐츠의 위치를 지정해줄수있다. */
