--- a/12강/실습예제2.html
+++ b/12강/실습예제2.html
@@ -2,7 +2,21 @@
 <html>
 <head>
 <style>
-    
+    .relative{
+        width: 450px;
+        height: 250px;
+        border: 3px solid #73AD21;
+        position: relative;
+    }
+    .relative .absolute{
+        width: 200px;
+        height: 100px;
+        border: 3px solid #73AD21;
+        position: absolute;
+        left: 245px;
+        top: 130px;
+
+    }
 </style>
 </head>
 <body>
