--- a/12강/포지션-예제2.html
+++ b/12강/포지션-예제2.html
@@ -16,7 +16,7 @@
             position: fixed;
             bottom: 0;
             right: 0;
-             /* fixed는 해당 좌표에 위치에 고정시킨다.*/
+             /* fixed는 기준은 viewport의 해당 좌표에 위치에 고정시킨다.*/
         }
 
         div:nth-child(2){
