--- a/문제들/포지션예제.html
+++ b/문제들/포지션예제.html
@@ -16,10 +16,8 @@
         #head{
             width: 1000px;
             height: 300px;
-            background-image: url('문제들/제주2.png');
+            background-image: url('제주2.png');
             background-size: 100%;
-            p
-        
         }
         #nav{
             width: 1000px;
@@ -28,6 +26,9 @@
         }
         #nav .menu{
             background-color: black;
+        }
+        #nav .menu li{
+            margin: 0 auto;
         }
 
         a{
