--- a/문제들/요안도라사이트.html
+++ b/문제들/요안도라사이트.html
@@ -80,7 +80,11 @@
         #aside{
             background-color: rgb(144, 224, 161);
             width: 200px;
+            height: 550px;
             float: right;
+        }
+        #aside img{
+            margin-top: 10px;
         }
         #footer p:nth-child(1){
             font-style: italic;
@@ -130,7 +134,7 @@
             <p>게스트하우스 예약은 전화 070-###-#### 로 직접 통화하시는게 가장 정확하고 빠릅니다. 인터넷 전화이므로 시외 전화 요금이 부과되지 않습니다.</p>
             <img src="집1.jpg">
             <img src="집2.jpg">
-            <img src="집3.jpg">
+            <img src="집4.jpg">
         </div>
         <div id="footer">
             <p>제주특별자치도 남제주군 성산읍 수산리 000 번지 요안도라</p>
