--- a/부트스트랩/실습예제/부트스트랩-앨범사이트-클론.html
+++ b/부트스트랩/실습예제/부트스트랩-앨범사이트-클론.html
@@ -23,18 +23,20 @@
     <main>
         <section class="container my-5 text-center">
             <div class="row py-lg-5">
-                <div class="col-lg-6 col-md-8 mx-auto">  
+                <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Album example</h1>
-                    <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+                    <p class="lead text-body-secondary">Something short and leading about the collection below—its
+                        contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply
+                        skip over it entirely.</p>
                     <div class="container my-4">
-                    <button type="button" class="btn btn-primary" data-bs-toggle="popover" title="Popover Header"
-                        data-bs-content="Some content inside the popover">
-                        Main call to actin
-                    </button>
-                    <button type="button" class="btn btn-secondary " data-bs-toggle="popover" title="Popover Header"
-                    data-bs-content="Some content inside the popover">
-                    Secondary action
-                    </button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="popover" title="Popover Header"
+                            data-bs-content="Some content inside the popover">
+                            Main call to actin
+                        </button>
+                        <button type="button" class="btn btn-secondary " data-bs-toggle="popover" title="Popover Header"
+                            data-bs-content="Some content inside the popover">
+                            Secondary action
+                        </button>
                     </div>
                 </div>
             </div>
